...
import 'package:zest/ui/widgets/generics.dart';

import '../authentication/auth_service.dart';

class LoginPage extends StatefulHookConsumerWidget {
  const LoginPage({super.key});
  static String get routeName => 'login';
  static String get routeLocation => '/$routeName';

  @override
  LoginPageState createState() => LoginPageState();
}

...
                      fontWeight: FontWeight.w600),
                ),
                const ElementsVerticalSpace(),
                // Expanded(
                // child:
                TextFormField(
                  key: const Key('username'),
                  controller: userCtrl,
                  decoration: const InputDecoration(
                    labelText: "Username",
                  ),
                  textInputAction: TextInputAction.next,
                  enabled: !state.isLoading,
...
                // const ElementsVerticalSpace(),
                Stack(
                  children: [
                    // Expanded(
                    //   child:
                    TextFormField(
                      key: const Key('password'),
                      decoration: const InputDecoration(
                        labelText: "Password",
                        // border: OutlineInputBorder(),
                      ),
                      controller: passwordCtrl,
                      obscureText: !showPassword,
...
                                ? Icons.visibility_rounded
                                : Icons.visibility_off_rounded))),
                  ],
                ),
                if (state.hasError)
                  Text(
                    key: const Key('loginError_incorrect_credentials'),
                    "Login failed: $errorMsg",
                    style: TextStyle(
                      color: Theme.of(context).colorScheme.error,
                      fontSize: 14, //TODO: LOW dont use fixed size
                      fontWeight: FontWeight.w300,
                      fontFamily: "Montserrat",
...
