...
import '../recipes/screens/recipe_search.dart';

/// Builds the "shell" for the app by building a Scaffold with a
/// BottomNavigationBar, where [child] is placed in the body of the Scaffold.
class MainScaffold extends ConsumerWidget {
  /// Constructs an [MainScaffold].
  const MainScaffold({required this.child, super.key});

  /// The widget to display in the body of the Scaffold.
  /// In this sample, it is a Navigator.
  final Widget child;

  @override
...
                        }
                      }
                    : null,
              ),
            ),
            IconButton(
              icon: const Icon(key: Key("appbar_search_icon"), Icons.search),
              onPressed: () {
                ref.read(recipeSearchFilterSettingsProvider.notifier).reset();
                ref.invalidate(recipeSearchControllerProvider);
                context.goNamed(RecipeSearchPage.routeName);
              },
            ),
...
